' Generated by UML Generator
' Encoded: dLF1JiCm3BtdAonnwTWoSQvWsWG8JUA0j2FYO1BJHQH9bQGROunl9yter1NOWKkR-ldvFJlkr0TqeIuryw_ALEYm1A7H-ra8JZtNWUR2ceLw9xXWIoK9X7924sFA178lA0Zk75PB9M3B03vBkwBiBOS8Zs2JteCSLbR91fKErrdxlMCiIS6D3ObyjkSrfqrxuZm-XZ6ZNxG9dnGR_YvsdVmdFUvGgjeVI-tnNjKHT5879uhRihAraTsHSB5KMZeoETmh7ow_iGbSWQ4rp9p3JG8csU3W0gNC4Yzlnzjfp55g_4_yFsEPbrZGhLJ1khrhr3hlztEmfotAh5EpSBQk5gH918h66vOX4tolvH-g3nYz9RtXDcvYK687POnbw8f8NiGTDCNZKuVNxCfu_35fssRVzybvZ4MGzQ_WEBa7MiuFM7S2vp7UxtrAHiOVvGi
' URL: http://www.plantuml.com/plantuml/uml/dLF1JiCm3BtdAonnwTWoSQvWsWG8JUA0j2FYO1BJHQH9bQGROunl9yter1NOWKkR-ldvFJlkr0TqeIuryw_ALEYm1A7H-ra8JZtNWUR2ceLw9xXWIoK9X7924sFA178lA0Zk75PB9M3B03vBkwBiBOS8Zs2JteCSLbR91fKErrdxlMCiIS6D3ObyjkSrfqrxuZm-XZ6ZNxG9dnGR_YvsdVmdFUvGgjeVI-tnNjKHT5879uhRihAraTsHSB5KMZeoETmh7ow_iGbSWQ4rp9p3JG8csU3W0gNC4Yzlnzjfp55g_4_yFsEPbrZGhLJ1khrhr3hlztEmfotAh5EpSBQk5gH918h66vOX4tolvH-g3nYz9RtXDcvYK687POnbw8f8NiGTDCNZKuVNxCfu_35fssRVzybvZ4MGzQ_WEBa7MiuFM7S2vp7UxtrAHiOVvGi
' Generated on: 2025-12-01T12:39:09.013092219

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Graphic {
  ~move(x: int, y: int): void
  ~draw(): void
}

class Dot {
  #x: int
  #y: int
  --
  +Dot(x: int, y: int)
  +move(x: int, y: int): void
  +draw(): void
}

class Circle {
  -radius: int
  --
  +Circle(x: int, y: int, radius: int)
  +draw(): void
}

class CompoundGraphic {
  -children: List<Graphic> = new ArrayList<>()
  --
  +add(child: Graphic): void
  +remove(child: Graphic): void
  +move(x: int, y: int): void
  +draw(): void
}

class ImageEditor {
  -all: CompoundGraphic
  --
  +load(): void
  +groupSelected(components: List<Graphic>): void
}

class Paint {
  +{static} main(args: String[]): void
}

Dot ..|> Graphic
Circle --|> Dot
CompoundGraphic ..|> Graphic
CompoundGraphic o-- Graphic
ImageEditor *-- CompoundGraphic
@enduml